# command-line-assistant

./: .gitignore  .gitlab-ci.yml  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .tarpaulin.toml  .testing-farm.yaml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  config.toml  pyproject.toml  renovate.json  requirements.txt  setup.py  sonar-project.properties  tox.ini
.devcontainer/: Containerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build-manpages.yaml  codeql.yml  codespell.yml  enforce_labels.yml  linting.yml  pyright.yml  release.yml  sanity.yml  sonarqube.yml  unit-tests.yml
.tekton/: Containerfile  command-line-assistant-pull-request.yaml  command-line-assistant-push.yaml  pipeline-build.yaml  rpms.in.yaml  rpms.lock.yaml
command_line_assistant/: __main__.py  client.py  config.py  exceptions.py  handlers.py  history.py  initialize.py  integrations.py  logger.py  logging.py
command_line_assistant/commands/: README.md  __init__.py  base.py  chat.py  feedback.py  history.py  query.py  shell.py  status.py  utils.py
command_line_assistant/config/: __init__.py  schemas.py
command_line_assistant/config/schemas/: backend.py  database.py  history.py  logging.py  output.py
command_line_assistant/daemon/: clad.py  session.py
command_line_assistant/daemon/database/: manager.py
command_line_assistant/daemon/database/models/: base.py  chat.py  history.py
command_line_assistant/daemon/http/: adapters.py  query.py  session.py
command_line_assistant/dbus/: constants.py  context.py  definitions.py  exceptions.py  interfaces.py  sender_context.py  server.py  structures.py
command_line_assistant/dbus/interfaces/: authorization.py  base.py  chat.py  common.py  history.py  user.py
command_line_assistant/dbus/structures/: chat.py  history.py
command_line_assistant/history/: base.py  manager.py
command_line_assistant/history/plugins/: local.py
command_line_assistant/rendering/: markdown.py  renderers.py
command_line_assistant/rendering/decorators/: colors.py  menu.py  text.py
command_line_assistant/rendering/renders/: interactive.py  menu.py  spinner.py  text.py
command_line_assistant/terminal/: parser.py  reader.py
command_line_assistant/utils/: cli.py  dbus.py  environment.py  files.py  renderers.py
container-images/: default.Containerfile
crates/clad/: Cargo.toml  config.toml.example
crates/clad/src/: config.rs  main.rs  openai.rs  provider.rs  state.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli_json.rs  config.rs  helpers.rs  main.rs
crates/cli/src/commands/: chat.rs  history.rs  mod.rs  shell.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: man.rs  xtask.rs
data/development/systemd/: clad-devel.service
data/release/: clad.service
data/release/dbus/: com.redhat.lightspeed.conf
data/release/man/: c.1  clad.8
data/release/selinux/: Makefile  clad.fc  clad.if  clad.te
data/release/systemd/: clad.service
data/release/xdg/: config.toml
data/systemd/: clad-devel.service  clad.service  clad@.socket
docs/: architecture.md  book.toml  requirements.txt
docs/source/: index.rst
docs/source/commands/: index.rst  status.rst
docs/source/man/: clad.8.rst  command-line-assistant.1.rst
docs/source/utils/: dbus.rst
docs/src/man/: c-chat.8.md  c-history.8.md  c-internals-dump-cli-json.8.md  c-internals.8.md  c-shell.8.md  c.1.md  clad.8.md  command-line-assistant.1.md
packaging/: command-line-assistant.spec
scripts/: prepare_release.py
tests/: conftest.py  test_client.py  test_config.py  test_handlers.py  test_initialize.py  test_logger.py
tests/commands/: test_chat.py  test_commands.py  test_feedback.py  test_history.py  test_query.py  test_shell.py
tests/config/: test_config.py  test_schema.py
tests/config/schemas/: test_database.py  test_history.py  test_logging.py  test_schema.py
tests/daemon/database/: test_manager.py
tests/daemon/http/: test_query.py  test_session.py
tests/dbus/: test_interfaces.py  test_server.py
tests/dbus/interfaces/: test_chat.py  test_history.py
tests/history/: test_manager.py
tests/history/plugins/: test_local.py
tests/rendering/decorators/: test_colors.py  test_text.py
tests/rendering/renders/: test_markdown.py  test_spinner.py  test_text.py
tests/terminal/: test_parser.py
tests/utils/: test_cli.py  test_dbus.py  test_environment.py  test_files.py  test_renderers.py
(+10 files in other folders)
