[workspace]
resolver = "2"
members = [ "crates/clad","crates/cli", "crates/xtask"]

[workspace.package]
rust-version = "1.84.1"
license-file = "LICENSE"
description = "A simple wrapper to interact with RAG"
authors = [
    "RHEL Lightspeed Team <rhel-sst-lightspeed@redhat.com>"
]
readme = "README.md"
repository = "https://github.com/rhel-lightspeed/command-line-assistant"
documentation = "https://docs.redhat.com/en/documentation/red_hat_enterprise_linux/10/html/interacting_with_the_command-line_assistant_powered_by_rhel_lightspeed/index"
edition = "2021"
version = "1.0.0"

[workspace.dependencies]
serde = { version = "1.0.145", features = ["derive"]}
serde_json = "1.0.145"
tempfile = "3.23.0"
toml = "0.9.7"
anyhow = "1.0.100"

# See https://github.com/coreos/cargo-vendor-filterer
[workspace.metadata.vendor-filter]
# For now we only care about tier 1+2 Linux.  (In practice, it's unlikely there is a tier3-only Linux dependency)
platforms = ["*-unknown-linux-gnu"]
tier = "2"
all-features = true

[workspace.lints.rust]
# Require an extra opt-in for unsafe
unsafe_code = "deny"
# Absolutely must handle errors
unused_must_use = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
# Feel free to comment this one out locally during development of a patch.
dead_code = "deny"
# Suppress check-cfg warnings for standard test cfg
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[workspace.lints.clippy]
disallowed_methods = "deny"
# These should only be in local code
dbg_macro = "deny"
todo = "deny"
# These two are in my experience the lints which are most likely
# to trigger, and among the least valuable to fix.
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
