[package]
name = "clad"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[dependencies]
# Crate-specific dependencies
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"] }
futures = "0.3"
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
# Testing utilities
http-body-util = "0.1"

[lints]
workspace = true

[[bin]]
name = "clad"
path = "src/main.rs"
