# See https://github.com/matklad/cargo-xtask
# This is an implementation detail of bootc
[package]
name = "xtask"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/xtask.rs"

[dependencies]
# Crate-specific dependencies
mandown = "1.1.0"
tar = "0.4"
anstream = "0.6.21"
camino = "1.2.1"
chrono = "0.4.42"
fn-error-context = "0.2.1"
owo-colors = "4.2.3"
xshell = "0.2.7"

# Workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }


[lints]
workspace = true
